# SmartFarm

./: .gitignore  CMakeLists.txt  README.md  struct.txt
Robot_stm32/: .cproject  .project  irq Debug.launch  irq.ioc
Robot_stm32/Core/Inc/: main.h  motor_control.h  uart_handler.h
Robot_stm32/Core/Src/: main.c  motor_control.c  stm32f4xx_hal_msp.c  uart_handler.c
Robot_stm32/Debug/: irq.elf  irq.list  irq.map  makefile  objects.list
Robot_stm32/Debug/Core/Src/: main.cyclo  main.d  main.su  motor_control.cyclo  motor_control.d  motor_control.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  subdir.mk  uart_handler.cyclo  uart_handler.d  uart_handler.su
Robot_stm32/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
detect/: CMakeCache.txt  CMakeLists.txt  DetectionUtils.cpp  DetectionUtils.h  Makefile  cmake_install.cmake  demo  main.cpp  rtsp_videotest  rtsp_videotest.cpp
deviceDriver/: Makefile  buz_drv.c  buz_drv.mod.c  buz_drv_app.c  led_drv.c  led_drv_app.c
fire/: main.c  main.cpp
fire/inc/c/: clientUtil.h  main.h  network.h  sensorSend.h
fire/inc/cpp/: commSTM32.h  rtspServer.h  rtspStreaming.h  sensorThread.h
fire/src/c/: clientUtil.c  handshake.c  jsonlParse.c  network.c  sensorSend.c
fire/src/cpp/: DetectionUtils.cpp  commSTM32.cpp  rtspServer.cpp  rtspStreaming.cpp  sensorThread.cpp
hanwha/: main.cpp
intrusion/: main.c  testuserclient.c  userTest
intrusion/inc/: clientUtil.h  handshake.h  jsonlParse.h  main.h  network.h
intrusion/inc/c/: buzDrvApp.h  clientUtil.h  handshake.h  jsonlParse.h  network.h
intrusion/inc/cpp/: DetectionUtils.h  rtspServer.h  rtspStreaming.h
intrusion/src/: clientUtil.c  handshake.c  jsonlParse.c  network.c
intrusion/src/c/: buzDrvApp.c  clientUtil.c  handshake.c  jsonlParse.c  network.c
intrusion/src/cpp/: DetectionUtils.cpp  rtspServer.cpp  rtspStreaming.cpp
map/: .gitignore  main.c
map/debug/: draw  draw.cpp  drawMap.cpp  drawMap.h  track_20250731_140918.csv  track_20250731_154440.csv  track_20250731_154531.csv  track_20250731_155022.csv  track_20250731_155123.csv  track_20250731_175434.csv  track_20250731_175514.csv  track_20250731_183036.csv  track_20250731_183304.csv  track_20250731_183410.csv
map/inc/c/: clientUtil.h  main.h  network.h
map/inc/cpp/: mappingUtils.h  rtspServer.h  rtspStreaming.h
map/src/c/: clientUtil.c  handshake.c  jsonlParse.c  network.c
map/src/cpp/: mappingUtils.cpp  rtspServer.cpp  rtspStreaming.cpp
server/: main.c
server/inc/: main.h
server/inc/c/: db.h  handshake.h  main.h  mapUtil.h  network.h  receive.h  sendData.h  sensorUtil.h  storage.h  userclientsend.h
server/inc/cpp/: emailManage.h  sendEmail.h
server/server/inc/c/: main.h  mapUtil.h  userclientsend.h
server/server/inc/cpp/: display.h
server/server/src/c/: db.c  receive.c
server/server/src/cpp/: display.cpp
server/src/c/: db.c  handshake.c  mapUtil.c  network.c  receive.c  sendData.c  sensorUtil.c  storage.c  userclientsend.c
server/src/cpp/: display.cpp  emailManage.cpp  sendEmail.cpp
strawberry/: .gitignore  main.c  server.csr  test  test.cpp
strawberry/inc/c/: clientUtil.h  handshake.h  jsonlParse.h  main.h  network.h
strawberry/inc/cpp/: DetectionUtils.h  rtspServer.h  rtspStreaming.h
strawberry/src/c/: clientUtil.c  jsonlParse.c  network.c
strawberry/src/cpp/: DetectionUtils.cpp  rtspServer.cpp  rtspStreaming.cpp
userClient/: CMakeLists.txt  corestackwidget.cpp  corestackwidget.h  customtablewidget.cpp  customtablewidget.h  customtablewidget.ui  drawMap.cpp  drawmap.h  fullrowimagedelegate.h  imagedialog.cpp  imagedialog.h  imagedialog.ui  imagepushbutton.cpp  imagepushbutton.h  logcustomtablewidget.cpp  logcustomtablewidget.h  logsystemmanager.cpp  logsystemmanager.h  maildialog.cpp  maildialog.h  maildialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paginationproxymodel.h  resources.qrc  streamthread.h  weatherwidget.h
userClient/Detect/: detectcorewidget.cpp  detectcorewidget.h  detectmainwidget.cpp  detectmainwidget.h  detectmainwidget.ui  firedetectwidget.cpp  firedetectwidget.h  firedetectwidget.ui  intrusionwidget.cpp  intrusionwidget.h  intrusionwidget.ui  strawberrywidget.cpp  strawberrywidget.h  strawberrywidget.ui  videostreamhandler.cpp  videostreamhandler.h
userClient/LogSystem/: logwidget.cpp  logwidget.h  logwidget.ui
userClient/Network/: clientUtil.cpp  clientUtil.h  handshake.cpp  handshake.h  mapactivereceive.cpp  mapactivereceive.h  network.cpp  network.h  sensorreceive.cpp  sensorreceive.h
